# PauseAfterLoadUnscripted

./: .gitignore  CMakeLists.txt  CMakePresets.json  Common.props  PauseAfterLoadUnscripted.rc  PauseAfterLoadUnscripted.vcxproj  PauseAfterLoadUnscripted.vcxproj.filters  README.md  paluBuildArchive.cmake  paluDependencies.cmake  resource1.h  vcpkg-configuration.json  vcpkg.json
Batch/: build-AE-artifacts-rar.bat  build-artifacts-rar.bat
Config/: PauseAfterLoadUnscripted.ini
cmake/: version.rc.in
scripts/: archive_artifacts.py
src/: PluginFacade.cpp  PluginFacade.h  PrecompiledHeaders.cpp  PrecompiledHeaders.h  main.cpp
src/Data/: SettingsCache.cpp  SettingsCache.h  SimpleIni.cpp  SimpleIni.h
src/Pausing/: InputListener.h  PauseHandler.h
src/Relocation/: Hooks.cpp  Hooks.h
src/Utilities/: LogStackWalker.cpp  LogStackWalker.h  LogWrapper.h  RecursiveLock.cpp  RecursiveLock.h  StackWalker.cpp  StackWalker.h  utils.cpp  utils.h  version.cpp  version.h
